tests/sqlcmd/baselines/errors/load_classes5.errbaseline
Jar file not found: 'sqlcmdtest-procs.jar foo.jar'
